--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
-layout: post
+layout: notebook
 title:  "Welcome to Jekyll!"
 date:   2024-04-07 17:57:53 -0700
 categories: jekyll update
 ---
 <!DOCTYPE html>
 
-<script src="http://www.midijs.net/lib/midi.js"></script>
-<script>
+<html lang="en">
+  <script src="http://www.midijs.net/lib/midi.js"></script>
+  <script>
   MIDIjs.play('AUD_DW0298.mid');
 </script>
-
-<html lang="en">
 <head><meta charset="utf-8"/>
+  
 <meta content="chrome=1" http-equiv="X-UA-Compatible"/>
 <meta content="yes" name="apple-mobile-web-app-capable"/>
 <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
