--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ categories: jekyll update
 ---
 <!DOCTYPE html>
 
-<script src="http://www.midijs.net/lib/midi.js"></script>
+<script src="https://www.midijs.net/lib/midi.js"></script>
 <script>
   MIDIjs.play('AUD_DW0298.mid');
 </script>
