back to youtube

--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@ categories: jekyll update
 ---
 <!DOCTYPE html>
 
-<script src="https://www.midijs.net/lib/midi.js"></script>
-<script>
-  MIDIjs.play('AUD_DW0298.mid');
-</script>
-
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="chrome=1" http-equiv="X-UA-Compatible"/>
 <meta content="yes" name="apple-mobile-web-app-capable"/>
 <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
-<title>20240407_3 slides</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script><script type="module">
+<title>20240408 slides</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script><script type="module">
   import mermaid from 'https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.6.0/mermaid.esm.min.mjs';
   mermaid.initialize({ startOnLoad: true });
 </script>
@@ -7444,8 +7439,35 @@ main {
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
 <div class="reveal">
-<div class="slides"><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=3f79ed4b-49ef-4429-9f06-eb6f0b50f338">
+<div class="slides"><section><section><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=2326b770-e910-4d47-b377-39f2d81242e4">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [2]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="o">%%html</span>
+<span class="p">&lt;</span><span class="nt">iframe</span> <span class="na">width</span><span class="o">=</span><span class="s">"560"</span> <span class="na">height</span><span class="o">=</span><span class="s">"315"</span> <span class="na">src</span><span class="o">=</span><span class="s">"https://www.youtube.com/embed/Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&amp;autoplay=1;&amp;amp;controls=1"</span> <span class="na">title</span><span class="o">=</span><span class="s">"YouTube video player"</span> <span class="na">frameborder</span><span class="o">=</span><span class="s">"0"</span> <span class="na">allow</span><span class="o">=</span><span class="s">"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"</span> <span class="na">allowfullscreen</span><span class="p">&gt;&lt;/</span><span class="nt">iframe</span><span class="p">&gt;</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+<div class="jp-OutputArea jp-Cell-outputArea">
+<div class="jp-OutputArea-child">
+<div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
+<div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output" data-mime-type="text/html" tabindex="0">
+<iframe allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&amp;autoplay=1;&amp;controls=1" title="YouTube video player" width="560"></iframe>
+</div>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=1fde4596-6714-4845-a86f-12e832c8b9e7">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -7462,7 +7484,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="How-many-bands-can-say-they've-done-that?-Especially-with-half-of-the-members-on-the-track-having-passed-away-by-the-time-it-was-released.-Is-it-possible-to-quantify-their-hit-making-prowess,-how-it-relates-to-other-artists-that-have-been-on-the-charts,-and-maybe-gain-some-insight-on-their-hit-making-formula-using-data-science?">How many bands can say they've done that? Especially with half of the members on the track having passed away by the time it was released. Is it possible to quantify their hit-making prowess, how it relates to other artists that have been on the charts, and maybe gain some insight on their hit-making formula using data science?<a class="anchor-link" href="#How-many-bands-can-say-they've-done-that?-Especially-with-half-of-the-members-on-the-track-having-passed-away-by-the-time-it-was-released.-Is-it-possible-to-quantify-their-hit-making-prowess,-how-it-relates-to-other-artists-that-have-been-on-the-charts,-and-maybe-gain-some-insight-on-their-hit-making-formula-using-data-science?">¶</a></h3>
+<h3 id="How-many-bands-can-say-they've-done-that?-Especially-with-half-of-the-members-on-the-track-having-passed-away-by-the-time-it-was-released-(RIP-John-&amp;-George).-Might-it-be-possible-to-gain-some-insight-on-their-hit-making-formula-using-data-science?">How many bands can say they've done that? Especially with half of the members on the track having passed away by the time it was released (RIP John &amp; George). Might it be possible to gain some insight on their hit-making formula using data science?<a class="anchor-link" href="#How-many-bands-can-say-they've-done-that?-Especially-with-half-of-the-members-on-the-track-having-passed-away-by-the-time-it-was-released-(RIP-John-&amp;-George).-Might-it-be-possible-to-gain-some-insight-on-their-hit-making-formula-using-data-science?">¶</a></h3>
 </div>
 </div>
 </div>
@@ -7473,7 +7495,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="This-notebook-details-the-journey-for-those-answers...">This notebook details the journey for those answers...<a class="anchor-link" href="#This-notebook-details-the-journey-for-those-answers...">¶</a></h3>
+<h3 id="This-notebook-details-the-journey-for-that-answer...">This notebook details the journey for that answer...<a class="anchor-link" href="#This-notebook-details-the-journey-for-that-answer...">¶</a></h3>
 </div>
 </div>
 </div>
@@ -7484,7 +7506,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Exploratory-Data-Analysis-(EDA)">Exploratory Data Analysis (EDA)<a class="anchor-link" href="#Exploratory-Data-Analysis-(EDA)">¶</a></h2><h3 id="First,-inspect-the-input-data.-Make-sure-the-file-isn't-corrupted-or-garbage.">First, inspect the input data. Make sure the file isn't corrupted or garbage.<a class="anchor-link" href="#First,-inspect-the-input-data.-Make-sure-the-file-isn't-corrupted-or-garbage.">¶</a></h3>
+<h3 id="Exploratory-Data-Analysis-(EDA)">Exploratory Data Analysis (EDA)<a class="anchor-link" href="#Exploratory-Data-Analysis-(EDA)">¶</a></h3><h4 id="First,-inspect-the-input-data.-Make-sure-the-file-isn't-corrupted-or-garbage.">First, inspect the input data. Make sure the file isn't corrupted or garbage.<a class="anchor-link" href="#First,-inspect-the-input-data.-Make-sure-the-file-isn't-corrupted-or-garbage.">¶</a></h4>
 </div>
 </div>
 </div>
@@ -7497,7 +7519,7 @@ main {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
-<span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'hot-100-current.csv'</span><span class="p">)</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'hot-100-current.csv'</span><span class="p">)</span> <span class="c1">#Billboard top 100 chart from November 2023</span>
 <span class="n">df</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
 </pre></div>
 </div>
@@ -14485,7 +14507,7 @@ require(
         Reveal.addEventListener('slidechanged', update);
 
         function setScrollingSlide() {
-            var scroll = true
+            var scroll = false
             if (scroll === true) {
               var h = $('.reveal').height() * 0.95;
               $('section.present').find('section')
