--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@ title:  "Welcome to Jekyll!"
 date:   2024-04-07 17:57:53 -0700
 categories: jekyll update
 ---
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -7467,7 +7466,7 @@ main {
 </div>
 </div>
 </div>
-</div></section></section><section><section>
+</div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=1fde4596-6714-4845-a86f-12e832c8b9e7">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
