--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title:  "Welcome to Jekyll!"
 date:   2024-04-07 17:57:53 -0700
 categories: jekyll update
 ---
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -7477,7 +7478,7 @@ main {
 </div>
 </div>
 </div>
-</div></section><section>
+</div><div class="fragment">
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=a64a1f7d-072f-4d57-9026-831fc7deab3a">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -7488,7 +7489,7 @@ main {
 </div>
 </div>
 </div>
-</div><div class="fragment">
+</div></div><div class="fragment">
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=78600205-e2c4-4947-8caf-d82c63f79261">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
