--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ categories: jekyll update
 
     <script>
         function openYouTubePopup() {
-            // Replace 'VIDEO_ID' with the actual YouTube video ID
-            const videoId = 'VIDEO_ID';
+            // Replace 'Opxhh9Oh3rg' with the actual YouTube video ID
+            const videoId = 'Opxhh9Oh3rg';
             const url = `https://www.youtube.com/embed/${videoId}`;
             const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
 
