--- a/20240408.slides.html
+++ b/20240408.slides.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Your other content here -->
 
+    <script>
+        function openYouTubePopup() {
+            // Replace 'Opxhh9Oh3rg' with the actual YouTube video ID
+            const videoId = 'Opxhh9Oh3rg';
+            const url = `https://www.youtube.com/embed/${videoId}`;
+            const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
+
+            window.open(url, 'YouTubePopup', features);
+        }
+
+        // Call the function when the page loads
+        window.onload = openYouTubePopup;
+    </script>
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="chrome=1" http-equiv="X-UA-Compatible"/>
