--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ categories: jekyll update
     <script>
         function openYouTubePopup() {
             // Replace 'VIDEOID' with the actual YouTube video ID
-            const videoId = 'Opxhh9Oh3rg';
+            const videoId = 'Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1';
             const url = `https://www.youtube.com/embed/${videoId}`;
             const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
 
