--- a/index.html
+++ b/index.html
@@ -8612,18 +8612,8 @@ a.anchor-link {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1">#heatwaves</span>
-function openNewYouTubePopup(videoId) {
-    // Close the previous pop-up if it exists
-    if (youtubePopup && !youtubePopup.closed) {
-        youtubePopup.close();
-    }
-
-    // Open the new pop-up
-    youtubePopup = window.open(`https://www.youtube.com/embed/${mRD0-GxqHVo}`, 'YouTubePopup', 'width=800,height=600,resizable=yes,scrollbars=yes');
-}
-
-// Example usage:
-openNewYouTubePopup('mRD0-GxqHVo');
+<span class="o">%%html</span>
+<span class="p">&lt;</span><span class="nt">iframe</span> <span class="na">width</span><span class="o">=</span><span class="s">"560"</span> <span class="na">height</span><span class="o">=</span><span class="s">"315"</span> <span class="na">src</span><span class="o">=</span><span class="s">"https://www.youtube.com/embed/mRD0-GxqHVo?si=KY4Rj5W1MYjhstSv&amp;autoplay=1;&amp;amp;controls=1"</span> <span class="na">title</span><span class="o">=</span><span class="s">"YouTube video player"</span> <span class="na">frameborder</span><span class="o">=</span><span class="s">"0"</span> <span class="na">allow</span><span class="o">=</span><span class="s">"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"</span> <span class="na">allowfullscreen</span><span class="p">&gt;&lt;/</span><span class="nt">iframe</span><span class="p">&gt;</span>
 </pre></div>
 </div>
 </div>
