--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ categories: jekyll update
             const url = `https://www.youtube.com/embed/${videoId}`;
             const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
 
-           const youtubePopup =  window.open(url, 'YouTubePopup', features);
+           window.open(url, 'YouTubePopup', features);
         }
 
         // Call the function when the page loads
