--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -21,7 +21,7 @@ categories: jekyll update
         }
 
         // Call the function when the page loads
-        const youtubePopup =  window.onload = openYouTubePopup;
+        window.onload = openYouTubePopup;
     </script>
 <!DOCTYPE html>
 
