--- a/index.html
+++ b/index.html
@@ -5,24 +5,6 @@ date:   2024-04-07 17:57:53 -0700
 categories: jekyll update
 ---
 <!DOCTYPE html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Pop-up</title>
-
-    <!-- Your other content here -->
-
-    <script>
-        function openYouTubePopup() {
-            // Replace 'VIDEO_ID' with the actual YouTube video ID
-            const videoId = /Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1';
-            const url = `https://www.youtube.com/embed/${videoId}`;
-            const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
-
-           window.open(url, 'YouTubePopup', features);
-        }
-
-        // Call the function when the page loads
-        window.onload = openYouTubePopup;
-    </script>
 
 <html lang="en">
 <head><meta charset="utf-8"/>
@@ -7515,11 +7497,11 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [1]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [13]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="o">%%html</span>
-<span class="p">&lt;</span><span class="nt">iframe</span> <span class="na">width</span><span class="o">=</span><span class="s">"560"</span> <span class="na">height</span><span class="o">=</span><span class="s">"315"</span> <span class="na">src</span><span class="o">=</span><span class="s">"https://www.youtube.com/embed/Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&amp;autoplay=1;&amp;amp;controls=1"</span> <span class="na">title</span><span class="o">=</span><span class="s">"YouTube video player"</span> <span class="na">frameborder</span><span class="o">=</span><span class="s">"0"</span> <span class="na">allow</span><span class="o">=</span><span class="s">"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"</span> <span class="na">allowfullscreen</span><span class="p">&gt;&lt;/</span><span class="nt">iframe</span><span class="p">&gt;</span>
+<span class="p">&lt;</span><span class="nt">iframe</span> <span class="na">width</span><span class="o">=</span><span class="s">"560"</span> <span class="na">height</span><span class="o">=</span><span class="s">"315"</span> <span class="na">src</span><span class="o">=</span><span class="s">"https://www.youtube.com/embed/Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&amp;autoplay=1;&amp;amp;controls=1"</span> <span class="na">title</span><span class="o">=</span><span class="s">"YouTube video player"</span> <span class="na">frameborder</span><span class="o">=</span><span class="s">"0"</span> <span class="na">allow</span><span class="o">=</span><span class="s">"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"</span> <span class="na">allowfullscreen</span><span class="p">&gt;&lt;/</span><span class="nt">iframe</span><span class="p">&gt;</span>
 </pre></div>
 </div>
 </div>
@@ -7532,7 +7514,7 @@ a.anchor-link {
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output" data-mime-type="text/html" tabindex="0">
-<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&amp;autoplay=1;&amp;controls=1" title="YouTube video player" width="560"></iframe>
+<iframe allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&amp;autoplay=1;&amp;controls=1" title="YouTube video player" width="560"></iframe>
 </div>
 </div>
 </div>
