--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -5,24 +5,6 @@ date:   2024-04-07 17:57:53 -0700
 categories: jekyll update
 ---
 <!DOCTYPE html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Pop-up</title>
-
-    <!-- Your other content here -->
-
-    <script>
-        function openYouTubePopup() {
-            // Replace 'VIDEO_ID' with the actual YouTube video ID
-            const videoId = '/Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1';
-            const url = `https://www.youtube.com/embed/${videoId}`;
-            const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
-
-           window.open(url, 'YouTubePopup', features);
-        }
-
-        // Call the function when the page loads
-        window.onload = openYouTubePopup;
-    </script>
 
 <html lang="en">
 <head><meta charset="utf-8"/>
@@ -7468,7 +7450,34 @@ main {
 </div>
 </div>
 </div>
+</div></section></section><section><section><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=55a63183-27b3-4583-9909-343d3eea062c">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [5]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="c1">
+    <script>function openNewYouTubePopup(videoId) {
+    // Close the previous pop-up if it exists
+    if (youtubePopup && !youtubePopup.closed) {
+        youtubePopup.close();
+    }
+
+    // Open the new pop-up
+    youtubePopup = window.open(`https://www.youtube.com/embed/${videoId}`, 'YouTubePopup', 'width=800,height=600,resizable=yes,scrollbars=yes');
+}
+
+// Example usage:
+openNewYouTubePopup('mRD0-GxqHVo?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1');
+    </script></span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=1fde4596-6714-4845-a86f-12e832c8b9e7">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -7517,7 +7526,7 @@ main {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [2]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [6]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
@@ -7533,7 +7542,7 @@ main {
 </div>
 <div class="jp-OutputArea jp-Cell-outputArea">
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
-<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[2]:</div>
+<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[6]:</div>
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
 <div>
 <style scoped="">
@@ -8439,21 +8448,7 @@ main {
 <div class="jp-InputPrompt jp-InputArea-prompt">In [2]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span>
-    <span class="c1">%%html
-    function openNewYouTubePopup(videoId) {
-    // Close the previous pop-up if it exists
-    if (youtubePopup && !youtubePopup.closed) {
-        youtubePopup.close();
-    }
-
-    // Open the new pop-up
-    youtubePopup = window.open(`https://www.youtube.com/embed/${videoId}`, 'YouTubePopup', 'width=800,height=600,resizable=yes,scrollbars=yes');
-}
-
-// Example usage:
-openNewYouTubePopup('mRD0-GxqHVo?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1');
-</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="c1">#heatwaves</span>
 </pre></div>
 </div>
 </div>
