--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -5,7 +5,19 @@ date:   2024-04-07 17:57:53 -0700
 categories: jekyll update
 ---
 <!DOCTYPE html>
+<script>function openNewYouTubePopup(videoId) {
+    // Close the previous pop-up if it exists
+    if (youtubePopup && !youtubePopup.closed) {
+        youtubePopup.close();
+    }
 
+    // Open the new pop-up
+    youtubePopup = window.open(`https://www.youtube.com/embed/${videoId}`, 'YouTubePopup', 'width=800,height=600,resizable=yes,scrollbars=yes');
+}
+
+// Example usage:
+openNewYouTubePopup('Opxhh9Oh3rg?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1');
+    </script>
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="chrome=1" http-equiv="X-UA-Compatible"/>
@@ -7458,20 +7470,8 @@ main {
 <div class="jp-InputPrompt jp-InputArea-prompt">In [5]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="c1">
-    <script>function openNewYouTubePopup(videoId) {
-    // Close the previous pop-up if it exists
-    if (youtubePopup && !youtubePopup.closed) {
-        youtubePopup.close();
-    }
-
-    // Open the new pop-up
-    youtubePopup = window.open(`https://www.youtube.com/embed/${videoId}`, 'YouTubePopup', 'width=800,height=600,resizable=yes,scrollbars=yes');
-}
-
-// Example usage:
-openNewYouTubePopup('mRD0-GxqHVo?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1');
-    </script></span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="c1">#heatwves0
+    </span>
 </pre></div>
 </div>
 </div>
@@ -8454,7 +8454,23 @@ openNewYouTubePopup('mRD0-GxqHVo?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1'
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=39311ebd-8a4a-44aa-a8bd-b5c41ad944d9">
+</div>
+
+  <script>function openNewYouTubePopup(videoId) {
+    // Close the previous pop-up if it exists
+    if (youtubePopup && !youtubePopup.closed) {
+        youtubePopup.close();
+    }
+
+    // Open the new pop-up
+    youtubePopup = window.open(`https://www.youtube.com/embed/${videoId}`, 'YouTubePopup', 'width=800,height=600,resizable=yes,scrollbars=yes');
+}
+
+// Example usage:
+openNewYouTubePopup('mRD0-GxqHVo?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1');
+    </script>
+  
+<div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=39311ebd-8a4a-44aa-a8bd-b5c41ad944d9">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
