--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -5,6 +5,8 @@ date:   2024-04-07 17:57:53 -0700
 categories: jekyll update
 ---
 <!DOCTYPE html>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>function openNewYouTubePopup(videoId) {
     // Close the previous pop-up if it exists
     if (youtubePopup && !youtubePopup.closed) {
