--- a/index.html
+++ b/index.html
@@ -7537,7 +7537,8 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Contents-from-the-'/media/user/README_1.md'-markdown-file:">Contents from the '/media/user/README_1.md' markdown file:<a class="anchor-link" href="#Contents-from-the-'/media/user/README_1.md'-markdown-file:">¶</a></h1><p>Read more <a href="./20240412.slides.html">here</a> # It works!</p>
+<p>Beta Slides Version:
+Read more <a href="./20240412.slides.html">here</a> # It works!</p>
 </div>
 </div>
 </div>
