--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -7493,6 +7493,7 @@ main {
 
 // Example usage:
 openNewYouTubePopup('mRD0-GxqHVo?si=KY4Rj5W1MYjhstSv&autoplay=1;&amp;controls=1');
+window.onload = openNewYouTubePopup;
 </script>
 <section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=1fde4596-6714-4845-a86f-12e832c8b9e7">
