--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -7481,6 +7481,7 @@ main {
 </div>
 </div></section></section>
 <script>
+    window.close();
     function openNewYouTubePopup(videoId) {
     // Close the previous pop-up if it exists
     if (youtubePopup && !youtubePopup.closed) {
