--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -7483,7 +7483,7 @@ main {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Data-Science-With-the-Beatles:-Statistically-the-Best?">Data Science With the Beatles: Statistically the Best?<a class="anchor-link" href="#Data-Science-With-the-Beatles:-Statistically-the-Best?">¶</a></h1>
-</div>
+<a href="#" onclick="handleLinkClick()">Click me!</a></div>
 </div>
 </div>
 </div></section></section><section><section><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=55a63183-27b3-4583-9909-343d3eea062c">
