--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -45,7 +45,6 @@ categories: jekyll update
 <a href="#" onclick="handleLinkClick()">Click me!</a>
 
 
-
 <head><meta charset="utf-8"/>
 <meta content="chrome=1" http-equiv="X-UA-Compatible"/>
 <meta content="yes" name="apple-mobile-web-app-capable"/>
@@ -7485,7 +7484,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Data-Science-With-The-Beatles:">Data Science With The Beatles:<a class="anchor-link" href="#Data-Science-With-The-Beatles:">¶</a></h2><h2 id="Statistically-the-Best-Pop-Artists-Ever?">Statistically the Best Pop Artists Ever?<a class="anchor-link" href="#Statistically-the-Best-Pop-Artists-Ever?">¶</a></h2>
+<h2 id="Data-Science-With-The-Beatles-Statistically-the-Best-Pop-Act-Ever?">Data Science With The Beatles Statistically the Best Pop Act Ever?<a class="anchor-link" href="#Data-Science-With-The-Beatles-Statistically-the-Best-Pop-Act-Ever?">¶</a></h2>
 </div>
 </div>
 </div>
@@ -7511,14 +7510,14 @@ main {
 </div>
 </div>
 </div>
-</div></div></section></section><section><section>
+</div></div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=f591d7cc-99e8-4efb-b199-6be01dba0f42">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Might-it-be-possible-to-gain-some-insight-on-their-hit-making-formula-using-data-science?-(%3C---High-level-Motivation-/-Question-/-Bus.-Problem)">Might it be possible to gain some insight on their hit-making formula using data science? (&lt;-- High-level Motivation / Question / Bus. Problem)<a class="anchor-link" href="#Might-it-be-possible-to-gain-some-insight-on-their-hit-making-formula-using-data-science?-(%3C---High-level-Motivation-/-Question-/-Bus.-Problem)">¶</a></h2>
+<h2 id="Might-it-be-possible-to-gain-some-insight-on-their-hit-making-formula-using-data-science?">Might it be possible to gain some insight on their hit-making formula using data science?<a class="anchor-link" href="#Might-it-be-possible-to-gain-some-insight-on-their-hit-making-formula-using-data-science?">¶</a></h2>
 </div>
 </div>
 </div>
@@ -7533,7 +7532,7 @@ main {
 </div>
 </div>
 </div>
-</div></div></section></section><section><section>
+</div></div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=b2549aad-dc89-4acb-8b27-f8270bd86a26">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -8414,7 +8413,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Question-(Motivation)-%231:-Has-anyone-had-a-song-on-the-charts-longer-than-the-longest-Beatles'-song-ever-on-the-charts?">Question (Motivation) #1: Has anyone had a song on the charts longer than the longest Beatles' song ever on the charts?<a class="anchor-link" href="#Question-(Motivation)-%231:-Has-anyone-had-a-song-on-the-charts-longer-than-the-longest-Beatles'-song-ever-on-the-charts?">¶</a></h3><h3 id="Method-1:-First,-isolate-the-Beatles-data-in-their-own-dataframe-and-all-other-artists-in-a-different-one-to-compare-easily.-I'll-also-group-the-ROW-df-by-performer-&amp;-title-in-case-there-are-any-songs-that-released-by-more-than-one-artist-(covers)-and-then-sort-both-dfs-by-wks_on_chart-in-descending-order.">Method 1: First, isolate the Beatles data in their own dataframe and all other artists in a different one to compare easily. I'll also group the ROW df by performer &amp; title in case there are any songs that released by more than one artist (covers) and then sort both dfs by wks_on_chart in descending order.<a class="anchor-link" href="#Method-1:-First,-isolate-the-Beatles-data-in-their-own-dataframe-and-all-other-artists-in-a-different-one-to-compare-easily.-I'll-also-group-the-ROW-df-by-performer-&amp;-title-in-case-there-are-any-songs-that-released-by-more-than-one-artist-(covers)-and-then-sort-both-dfs-by-wks_on_chart-in-descending-order.">¶</a></h3><h3 id="Categorical-Variables">Categorical Variables<a class="anchor-link" href="#Categorical-Variables">¶</a></h3><h4 id="Two-categories:-The-Beatles-song-on-the-charts-the-longest-vs.-the-Non-Beatles-song-on-the-charts-the-longest.">Two categories: The Beatles song on the charts the longest vs. the Non-Beatles song on the charts the longest.<a class="anchor-link" href="#Two-categories:-The-Beatles-song-on-the-charts-the-longest-vs.-the-Non-Beatles-song-on-the-charts-the-longest.">¶</a></h4>
+<h3 id="Question-(Motivation)-%231:-Has-anyone-had-a-song-on-the-charts-longer-than-the-longest-Beatles'-song-ever-on-the-charts?">Question (Motivation) #1: Has anyone had a song on the charts longer than the longest Beatles' song ever on the charts?<a class="anchor-link" href="#Question-(Motivation)-%231:-Has-anyone-had-a-song-on-the-charts-longer-than-the-longest-Beatles'-song-ever-on-the-charts?">¶</a></h3><h3 id="Method-1:-First,-isolate-the-Beatles-data-in-their-own-dataframe-and-all-other-artists-in-a-different-one-to-compare-easily.-I'll-also-group-the-ROW-df-by-performer-&amp;-title-in-case-there-are-any-songs-that-released-by-more-than-one-artist-(covers)-and-then-sort-both-dfs-by-wks_on_chart-in-descending-order.">Method 1: First, isolate the Beatles data in their own dataframe and all other artists in a different one to compare easily. I'll also group the ROW df by performer &amp; title in case there are any songs that released by more than one artist (covers) and then sort both dfs by wks_on_chart in descending order.<a class="anchor-link" href="#Method-1:-First,-isolate-the-Beatles-data-in-their-own-dataframe-and-all-other-artists-in-a-different-one-to-compare-easily.-I'll-also-group-the-ROW-df-by-performer-&amp;-title-in-case-there-are-any-songs-that-released-by-more-than-one-artist-(covers)-and-then-sort-both-dfs-by-wks_on_chart-in-descending-order.">¶</a></h3><h2 id="Categorical-Variables">Categorical Variables<a class="anchor-link" href="#Categorical-Variables">¶</a></h2><h3 id="Two-categories:-The-Beatles-song-on-the-charts-the-longest-vs.-the-Non-Beatles-song-on-the-charts-the-longest.">Two categories: The Beatles song on the charts the longest vs. the Non-Beatles song on the charts the longest.<a class="anchor-link" href="#Two-categories:-The-Beatles-song-on-the-charts-the-longest-vs.-the-Non-Beatles-song-on-the-charts-the-longest.">¶</a></h3>
 </div>
 </div>
 </div>
@@ -8783,7 +8782,7 @@ dtype: int64</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Message-3a:-Histogram-distributions-for-all-variables-(all-Paretos)----which-means-most-of-their-songs-were-chart-toppers,-and-even-wks_on_chart-show-how-many-songs-weren't-on-the-charts-for-that-long-and-shows-just-how-many-songs-the-Beatles-had-on-the-charts!">Message 3a: Histogram distributions for all variables (all Paretos) -- which means most of their songs were chart-toppers, and even wks_on_chart show how many songs weren't on the charts for that long and shows just how many songs the Beatles had on the charts!<a class="anchor-link" href="#Message-3a:-Histogram-distributions-for-all-variables-(all-Paretos)----which-means-most-of-their-songs-were-chart-toppers,-and-even-wks_on_chart-show-how-many-songs-weren't-on-the-charts-for-that-long-and-shows-just-how-many-songs-the-Beatles-had-on-the-charts!">¶</a></h3>
+<h3 id="Message-3a:-All-Pareto-charts-for-all-variables----most-of-the-Beatles-songs-on-the-charts-were-chart-toppers.-Wks_on_chart-hist-shows-that-most-Beatles-songs-were-on-chart-only-for-a-handful-of-weeks!">Message 3a: All Pareto charts for all variables -- most of the Beatles songs on the charts were chart-toppers. Wks_on_chart hist shows that most Beatles songs were on chart only for a handful of weeks!<a class="anchor-link" href="#Message-3a:-All-Pareto-charts-for-all-variables----most-of-the-Beatles-songs-on-the-charts-were-chart-toppers.-Wks_on_chart-hist-shows-that-most-Beatles-songs-were-on-chart-only-for-a-handful-of-weeks!">¶</a></h3>
 </div>
 </div>
 </div>
