--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -61,10 +61,6 @@ categories: jekyll update
 <html lang="en">
 <a href="#" onclick="handleLinkClick2()">Click me!</a>
 
-
-<!DOCTYPE html>
-
-<html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="chrome=1" http-equiv="X-UA-Compatible"/>
 <meta content="yes" name="apple-mobile-web-app-capable"/>
@@ -8453,7 +8449,7 @@ main {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [54]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [92]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">df2</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'hot-100-current.csv'</span><span class="p">)</span>
@@ -8529,7 +8525,7 @@ main {
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
 <pre>         performer                             title  wks_on_chart
-25563  The Beatles                   Twist And Shout            26
+25563  The Beatles                   <a href="#" onclick="handleLinkClick3()">Twist And Shout</a>            26
 25525  The Beatles                          Hey Jude            19
 25514  The Beatles           Come Together/Something            16
 25522  The Beatles       Got To Get You Into My Life            16
@@ -8543,7 +8539,7 @@ main {
 
 [66 rows x 3 columns]
 </pre>
-</div><a href="#" onclick="handleLinkClick3()">Click me!</a>
+</div>
 </div>
 </div>
 </div>
@@ -9099,7 +9095,7 @@ dtype: int64</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Message-4:-Average-peak-for-aall-songs-is-only-79----what-is-the-beatles-highest-average-peak-position-I-wonder?-A-question-for-later.">Message 4: Average peak for aall songs is only 79 -- what is the beatles highest average peak position I wonder? A question for later.<a class="anchor-link" href="#Message-4:-Average-peak-for-aall-songs-is-only-79----what-is-the-beatles-highest-average-peak-position-I-wonder?-A-question-for-later.">¶</a></h3>
+<h3 id="Message-4:-Average-peak-for-all-songs-is-only-79----what-is-the-beatles-highest-average-peak-position-I-wonder?-A-question-for-later.">Message 4: Average peak for all songs is only 79 -- what is the beatles highest average peak position I wonder? A question for later.<a class="anchor-link" href="#Message-4:-Average-peak-for-all-songs-is-only-79----what-is-the-beatles-highest-average-peak-position-I-wonder?-A-question-for-later.">¶</a></h3>
 </div>
 </div>
 </div>
@@ -9867,7 +9863,7 @@ dtype: int64</pre>
 </div>
 </div>
 </div>
-</div><div class="fragment"><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=7055d0e1-cafb-4a14-b6d7-cd1483c5f4ff">
+</div></section><section><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=7055d0e1-cafb-4a14-b6d7-cd1483c5f4ff">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -10084,7 +10080,7 @@ See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stab
 </div>
 </div>
 </div>
-</div></div></section><section>
+</div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=308a9067-2b1b-4601-ba15-3b28425895ac">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
