--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -36,7 +36,7 @@ categories: jekyll update
         function handleLinkClick2() {
             // Your custom JavaScript code here
             openYouTubePopup2();
-            alert("Anchor link clicked! Execute your ACH-related logic.");
+            // alert("Anchor link clicked! Execute your ACH-related logic.");
             // You can replace the alert with any desired action.
         }
 
@@ -52,7 +52,7 @@ categories: jekyll update
         function handleLinkClick3() {
             // Your custom JavaScript code here
             openYouTubePopup2();
-            alert("Anchor link clicked! Execute your ACH-related logic.");
+            // alert("Anchor link clicked! Execute your ACH-related logic.");
             // You can replace the alert with any desired action.
         }
     </script>
