--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -59,7 +59,7 @@ categories: jekyll update
         
  
 <html lang="en">
-<a href="" onclick="handleLinkClick2()">Click me!</a>
+<!-- <<a href="" onclick="handleLinkClick2()">Click me!</a> -->
 
 <head><meta charset="utf-8"/>
 <meta content="chrome=1" http-equiv="X-UA-Compatible"/>
